Fix spacing between label apr

--- a/packages/fulcrum-website/_sass/component/_sections.scss
+++ b/packages/fulcrum-website/_sass/component/_sections.scss
@@ -506,3 +506,13 @@ input[type="number"] {
     flex-direction: column;
     justify-content: space-between;
   }
+.apr-wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    @media (max-width: 767px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 479px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
